# tfg-cuda-energy-performance-nvidia

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TO_DO.md  fixes.md
docs/: thesis-assignment.md
results/: tfg_results_20260328_055448.tgz
results/a100/baseline/: bw.csv  bw_baseline.csv  compute.csv  compute_baseline.csv  gemm.csv  gemm_baseline.csv
results/a100/energy/: efficiency_active_summary.csv
results/a100/energy/archive/: efficiency_summary.csv  efficiency_summary_gemm.csv  power_bw.csv  power_compute.csv  power_gemm.csv
scripts/: energy_active_summary.py  perf_targets.py  plot_bw.py  plot_compare_envs.py  plot_compute.py  plot_fft.py  plot_gemm.py  power_logger.sh  run_campaign.sh  run_compare.sh  validate_compare.py  validate_results.py
scripts/archive/: energy_summary.py
src/: bench_api.h  bw_bench.cu  compute_bench.cu  device_info.cu  fft_bench.cu  gemm_bench.cu  main.cu
